fix(theme): code not break in list

--- a/_app/assets/themes/curtana/_less/app.less
+++ b/_app/assets/themes/curtana/_less/app.less
@@ -472,9 +472,9 @@ body:hover .latest {
   }
 
   // Only apply word breaking rule for codes in paragraphs
-  p code {
-    word-break: break-word;
-    word-wrap: break-word;
+  p code,
+  li code {
+    word-break: break-all;
   }
 
   pre {
